fix(theme): h1 center-alignment

--- a/themes/Steak/static/style.css
+++ b/themes/Steak/static/style.css
@@ -17,7 +17,7 @@ img {
 	max-width: 100% ;
 }
 
-header h1 {
+h1 {
 	text-align: center ;
 }
 
